--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -14,13 +14,17 @@ a {
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
+    
+b {
+	color: #f37720;
+}
 
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
-  color: rgba(255, 255, 255, 0.7);
+  color: #333;
   background-color: rgba(255, 255, 255, 0.08);
-  border-color: rgba(255, 255, 255, 0.2);
+  border-color: #3ba13d;
   border-style: solid;
   border-width: 1px;
   border-radius: 0.3rem;
@@ -54,14 +58,13 @@ a {
       margin-left: 0; } }
 
 .page-header {
-  color: #fff;
+  color: #333;
   text-align: center;
-  background-color: #3ba13d;
 }
 
 @media screen and (min-width: 64em) {
   .page-header {
-    padding: 5rem 6rem; } }
+    padding: 5rem 6rem 0rem 6rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .page-header {
