--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -22,9 +22,9 @@ b {
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
-  color: #333;
-  background-color: rgba(255, 255, 255, 0.08);
-  border-color: #3ba13d;
+  color: rgba(51, 51, 51, 0.9);
+  background-color: rgba(59, 161, 61, 0.08);
+  border-color: rgba(59, 161, 61, 0.8);
   border-style: solid;
   border-width: 1px;
   border-radius: 0.3rem;
@@ -33,10 +33,10 @@ b {
     margin-left: 1rem; }
 
 .btn:hover {
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(51, 51, 51, 1);
   text-decoration: none;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-color: rgba(255, 255, 255, 0.3); }
+  background-color: rgba(59, 161, 61, 0.2);
+  border-color: rgba(59, 161, 61, 1); }
 
 @media screen and (min-width: 64em) {
   .btn {
